- added text to blank links - fixed contrast issues

--- a/src/scss/_footer.scss
+++ b/src/scss/_footer.scss
@@ -68,7 +68,7 @@ footer {
     }
 
     .footer-seperator {
-      color: $sttm-lighter-grey;
+      color: $sttm-darkest-grey;
       display: block;
       font-size: 0.9em;
       line-height: 1;
