--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -348,3 +348,7 @@ select {
 body:not(.dark-mode) a {
   color: #1374b4;
 }
+
+.transparent-color {
+  color: transparent !important;
+}
